--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,7 +1,7 @@
 <div id="header-div">
   <div class="left">
     <div id="about">
-      <h2>I CAN DRAW!</h2>
+      <h2>iDraw</h2>
     </div>
   </div>
  
@@ -63,10 +63,9 @@
     <button id="close-modal">×</button>
 
     <label><h2>About</h2></label>
-    <p></p>
+    <h4 class="modal-text">iDraw is intended to give children the opportunity to practice using a computer mouse or trackpad while drawing their favorite cartoon charater.  I believe that children learn best while they're having fun.</h4>
   </div>
 </div>
-
 
 <div id="footer">
   <div class="center">
