--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -40,13 +40,13 @@
 </table>
 
 
-<div id="new-cartoon">
-  <%= form_for(@cartoon) do |f| %>
-    <%= f.label :name, "Upload an Image!" %><br>
-    <%= f.text_field :name, placeholder: "Cartoon Name" %>
-    <%= f.file_field :avatar %>
-  <% end %>
-</div>
+<!-- <div id="new-cartoon">
+  <%#= form_for(@cartoon) do |f| %>
+    <%#= f.label :name, "Upload an Image!" %><br>
+    <%#= f.text_field :name, placeholder: "Cartoon Name" %>
+    <%#= f.file_field :avatar %>
+  <%# end %>
+</div> -->
 
 <div class="modal-base" id="search-modal-base">
   <div class="modal-main" id="search-modal-main">
