added postgresql to database.yml

--- a/app/assets/javascripts/drawings.js.erb
+++ b/app/assets/javascripts/drawings.js.erb
@@ -23,6 +23,7 @@ function chooseCartoon(){
       var image = this;
       imageHolderContext.drawImage(image, canvas.height/4-50, 15, canvas.width/4-80, canvas.height/4);
       context.globalAlpha = 1;
+      debugger
       hideModal();
     }
   <% end %>
