--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -154,7 +154,7 @@ button#close-modal {
 label {
   font-family: comic sans MS;
   padding-top: 3%;
-  padding left: 5%;
+  padding-left: 5%;
 }
 
 #footer {
