--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -17,7 +17,13 @@
 
 <table>
   <td>
-    <div id="canvasDiv"></div>
+    <div id="canvasDiv">
+    </div>
+  </td>
+
+  <td >
+    <div id="start-over">×</div>
+    <div id="remove-image">Done</div>
   </td>
 
   <td>
@@ -65,6 +71,7 @@
     <h4 class="modal-text">iDraw is intended to give children the opportunity to practice using a computer mouse or trackpad while drawing their favorite cartoon charater.  I believe that children learn best while they're having fun.</h4>
   </div>
 </div>
+
 
 <div id="footer">
   <div class="center">
