--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -44,15 +44,6 @@
   </td>
 </table>
 
-
-<!-- <div id="new-cartoon">
-  <%#= form_for(@cartoon) do |f| %>
-    <%#= f.label :name, "Upload an Image!" %><br>
-    <%#= f.text_field :name, placeholder: "Cartoon Name" %>
-    <%#= f.file_field :avatar %>
-  <%# end %>
-</div> -->
-
 <div class="modal-base" id="search-modal-base">
   <div class="modal-main" id="search-modal-main">
     <button id="close-modal">×</button>
@@ -68,10 +59,9 @@
     <button id="close-modal">×</button>
 
     <label><h2>About</h2></label>
-    <h4 class="modal-text">iDraw is intended to give children the opportunity to practice using a computer mouse or trackpad while drawing their favorite cartoon charater.  I believe that children learn best while they're having fun.</h4>
+    <h4 class="modal-text">Kids can finally learn to draw your favorite cartoon character by tracing over them!</h4>
   </div>
 </div>
-
 
 <div id="footer">
   <div class="center">
