--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -23,6 +23,8 @@
 
   <td >
     <div id="start-over">×</div>
+    <div id="js-undo"><--</div>
+    <div id="js-redo">--></div>
     <div id="remove-image">Done</div>
   </td>
 
