--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -202,3 +202,15 @@ label {
   width: auto;
   margin: auto;
 }
+
+#js-undo {
+  cursor: pointer;
+  font-size: 20px;
+  color: red;
+}
+
+#js-redo {
+  cursor: pointer;
+  font-size: 20px;
+  color: red;
+}
