added redo button

--- a/app/assets/javascripts/drawings.js.erb
+++ b/app/assets/javascripts/drawings.js.erb
@@ -7,26 +7,20 @@ $(function(){
   undoArray = [dataURL]
 });
 
+function recordHistory(){
+  var canvas = document.getElementById("canvas");
+  var dataURL = canvas.toDataURL();
+  undoArray.push(dataURL);
+  redoArray = new Array();
+}
+
 function listenOnMouse(){
   $("#canvas").on("mousedown", mouseDown);
-  $("#canvas").on("click", saveState);
-
-  function saveState(e){
-    // var canvas = document.getElementById("canvas");
-    // var dataURL = canvas.toDataURL();
-
-    // undoArray.push(dataURL);
-
-  }
 
   function mouseDown(e){
     paint = true;
     
-    var canvas = document.getElementById("canvas");
-    var dataURL = canvas.toDataURL();
-    undoArray.push(dataURL);
-    redoArray = new Array();
-
+    recordHistory();
     mouseCoordinates.push([e.offsetX, e.offsetY]);
     $(this).on("mousemove", mouseMove);
   }
@@ -79,16 +73,17 @@ function listenOnCanvasClearing(){
   }
 
   function undo(){
-    if(undoArray.length >= 1){
+    if((redoArray.length === 0) & (undoArray.length >= 1)){
       var canvas = document.getElementById("canvas");
       var dataURL = canvas.toDataURL();
       redoArray.unshift(dataURL);
-      
-      context.clearRect(0, 0, canvas.width, canvas.height);
+    }
+    if(undoArray.length >= 1){
+      context.clearRect(0, 0, $("#canvas").width(), $("#canvas").height());
       var image = document.createElement("img");
    
       redoArray.unshift(undoArray.pop());
-      // debugger
+
       image.setAttribute("src", redoArray[0]);
       context.drawImage(image, 0, 0);
     }
@@ -98,6 +93,7 @@ function listenOnCanvasClearing(){
     if(redoArray.length >= 1){
       context.clearRect(0, 0, canvas.width, canvas.height);
       var image = document.createElement("img");
+
       undoArray.push(redoArray.shift())
 
       image.setAttribute("src", undoArray[undoArray.length-1]);
