--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -22,9 +22,10 @@
   </td>
 
   <td >
-    <div id="start-over">×</div>
-    <div id="js-undo"><--</div>
-    <div id="js-redo">--></div>
+    <div id="start-over"><strong>×</strong></div>
+    <!-- <div id="js-undo"></div> -->
+    <img id="js-undo" src="http://icons.iconarchive.com/icons/everaldo/kids-icons/128/undo-icon.png"/>
+    <img id="js-redo" src="http://icons.iconarchive.com/icons/everaldo/kids-icons/128/redo-icon.png"/>
     <div id="remove-image">Done</div>
   </td>
 
