--- a/app/assets/javascripts/setup.js.erb
+++ b/app/assets/javascripts/setup.js.erb
@@ -5,6 +5,7 @@ function setUpEnvironment(){
   listenOnMouse();
   listenOnCanvasClearing();
   setModals();
+  drop();
   
   function setCanvas(){
     var canvasDiv = document.getElementById('canvasDiv');
