removed upload form

--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -19,12 +19,13 @@
   <td>
     <div id="canvasDiv">
     </div>
-    <div id="new-cartoon">
-      <%= form_for(@cartoon) do |f| %>
-        <%= f.text_field :name, placeholder: "Cartoon Name" %>
-        <%= f.file_field :avatar %>
-        <%= f.submit %>
-      <% end %>
+    <!-- <div id="new-cartoon">
+      <%#= form_for(@cartoon) do |f| %>
+        <%#= f.text_field :name, placeholder: "Cartoon Name" %>
+        <%#= f.file_field :avatar %>
+        <%#= f.submit %>
+      <%# end %>
+    </div> -->
   </div>
   </td>
 
