added coloring transparency

--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -72,7 +72,7 @@
     <button id="close-modal">×</button>
 
     <label><h2>About</h2></label>
-    <h4 class="modal-text">Kids can finally learn to draw your favorite cartoon character by tracing over them!</h4>
+    <h4 class="modal-text">iDraw allows you to draw your favorite cartoon character by tracing over it.</h4>
   </div>
 </div>
 
