--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -53,7 +53,8 @@
   height: 500px;
   border:1px solid;
   margin:auto;
-  z-index:10;
+  z-index:30;
+  pointer-events: none;
   position:absolute;
 }
 
