--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -19,6 +19,10 @@
   <td>
     <div id="canvasDiv">
     </div>
+    <div id="profile">
+      <div id="coloring">Color</div>
+      <div id="tracing">Trace</div>
+    </div>
     <!-- <div id="new-cartoon">
       <%#= form_for(@cartoon) do |f| %>
         <%#= f.text_field :name, placeholder: "Cartoon Name" %>
